--- a/primary.bib
+++ b/primary.bib
@@ -13,6 +13,27 @@
   url      = {https://journalprivacyconfidentiality.org/index.php/jpc/article/view/404},
 }
 
+@Article{Fellegi:1972,
+  author    = {Fellegi, I. P.},
+  title     = {On the question of statistical confidentiality},
+  journal   = {Journal of the American Statistical Association},
+  year      = {1972},
+  volume    = {67},
+  number    = {337},
+  pages     = {7--18},
+  issn      = {0162-1459},
+  abstract  = {In Section 1 the nature of statistical confidentiality is explored, i.e., its essential role in the collection of data by statistical offices, its relationship to privacy and the need for increased attention to potential statistical disclosures because of the increased tabulation and dissemination capabilities of statistical offices. In Section 2 a definition of inadvertent direct disclosure is provided as well as a theorem concerning a test for residual disclosure of tabulations. In Section 3 different media and methods of data dissemination are considered from the point of view of potential for statistical disclosure.},
+  copyright = {Copyright 1972 American Statistical Association},
+  doi       = {10.2307/2284695},
+  keywords  = {statistical disclosure limiation, SDL, primary},
+  language  = {English},
+  owner     = {vilhuber},
+  publisher = {American Statistical Association},
+  timestamp = {2016.08.30},
+  url       = {https://amstat.tandfonline.com/doi/abs/10.1080/01621459.1972.10481199#.XFuE8VxKg2w},
+  xurlx     = {http://www.jstor.org/stable/2284695},
+}
+
 @Article{abowd:fcsm:2016,
   author   = {Abowd, John M.},
   title    = {Why Statistical Agencies Need to Take Privacy-loss Budgets Seriously, and What It Means When They Do},
