edits to solve build problems

--- a/primary.bib
+++ b/primary.bib
@@ -131,7 +131,7 @@
 },
 }
 
-@Article{Campbell:Privacy:JEMS:,
+@Article{Campbell:Privacy:JEMS,
   author   = {Campbell, James and Goldfarb, Avi and Tucker, Catherine},
   title    = {Privacy Regulation and Market Structure},
   journal  = {Journal of Economics \& Management Strategy},
@@ -802,7 +802,7 @@
 }
 
 @Article{Nissim:DPNonTech:WP:2018,
-  author   = {Nissim, Kobbi and Steinke, Thomas and Wood, Alexandra and Altman, Micah and Bembenek, Aaron and Bun, Mark and Gaboardi, Marco and O{\textquoteright}Brien, David R. and Vadhan, Salil},
+  author   = {Nissim, Kobbi and Steinke, Thomas and Wood, Alexandra and Altman, Micah and Bembenek, Aaron and Bun, Mark and Gaboardi, Marco and O'Brien, David R. and Vadhan, Salil},
   title    = {Differential Privacy: A Primer for a Non-Technical Audience},
   journal  = {Privacy Law Scholars Conference 2017},
   year     = {2018},
