--- a/index.Rmd
+++ b/index.Rmd
@@ -2,12 +2,11 @@
 title: "Introductory Readings in Formal Privacy for Economists (In Progress)"
 author: "John M. Abowd, Ian M. Schmutte, and Lars Vilhuber"
 site: bookdown::bookdown_site
+github-repo: labordynamicsinstitute/privacy-bibliography
 documentclass: article
-output:
-  bookdown::gitbook: default
-  # bookdown::pdf_book: default
 bibliography: [primary.bib]
 link-citations: true
+citation_package: natbib
 biblio-style: "authoryear"
 ---
 
