format edits to citations

--- a/primary.bib
+++ b/primary.bib
@@ -40,8 +40,6 @@
   journal  = {The 13th Biennial Federal Committee on Statistical Methodology (FCSM) Policy Conference},
   year     = {2016},
   month    = {12},
-  note     = {\url{https://digitalcommons.ilr.cornell.edu/ldi/32/}},
-  doi      = {N/A},
   keywords = {Official Statistics, primary},
   url      = {https://digitalcommons.ilr.cornell.edu/ldi/32/},
 }
@@ -184,7 +182,7 @@
   lastaccessed = {February 11, 2013},
   owner        = {vilhuber},
   timestamp    = {2016.08.30},
-  url          = {\url{https://www.law.cornell.edu/uscode/pdf/lii_usc_TI_13.pdf}},
+  url          = {https://www.law.cornell.edu/uscode/pdf/lii_usc_TI_13.pdf},
 }
 
 @Misc{cipsea,
@@ -196,13 +194,13 @@
   lastaccessed = {February 11, 2013},
   owner        = {vilhuber},
   timestamp    = {2016.08.30},
-  url          = {\url{http://www.law.cornell.edu/topn/confidential_information_protection_and_statistical_efficiency_act_of_2002}},
+  url          = {http://www.law.cornell.edu/topn/confidential_information_protection_and_statistical_efficiency_act_of_2002},
 }
 
 @Misc{commerce.gov_2018,
   author       = {{U.S.~Department of Commerce}},
   title        = {{U.S.\ Department of Commerce Announces Reinstatement of Citizenship Question to the 2020 Decennial Census}},
-  howpublished = {\url{https://www.commerce.gov/news/press-releases/2018/03/us-department-commerce-announces-reinstatement-citizenship-question-2020}},
+  howpublished = {https://www.commerce.gov/news/press-releases/2018/03/us-department-commerce-announces-reinstatement-citizenship-question-2020},
   month        = {3},
   year         = {2018},
   note         = {Accessed: March 13, 2018},
@@ -383,8 +381,7 @@
   owner     = {vilhuber},
   publisher = {American Statistical Association},
   timestamp = {2016.08.30},
-  url       = {https://amstat.tandfonline.com/doi/abs/10.1080/01621459.1972.10481199#.XFuE8VxKg2w},
-  xurlx     = {http://www.jstor.org/stable/2284695},
+  url       = {https://amstat.tandfonline.com/doi/abs/10.1080/01621459.1972.10481199#.XFuE8VxKg2w}
 }
 
 @TechReport{Garfinkel:Deidentification:NIST:2015,
@@ -460,7 +457,7 @@
   owner     = {vilhuber},
   pmid      = {25635075},
   timestamp = {2016.08.30},
-  url       = {http://www.sciencemag.org/content/347/6221/479$\backslash$nhttp://www.ncbi.nlm.nih.gov/pubmed/25635075$\backslash$nhttp://www.sciencemag.org/content/347/6221/479.full.pdf$\backslash$nhttp://www.sciencemag.org/content/347/6221/479.summary},
+  url       = {http://http://science.sciencemag.org/content/347/6221/479.full},
 }
 
 @InProceedings{Gupta:2012:ICP:2238936.2238961,
@@ -1009,19 +1006,25 @@
   url       = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.39.1701{\&}amp;rep=rep1{\&}amp;type=pdf$\backslash$nhttp://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.39.1701{\&}rep=rep1{\&}type=pdf},
 }
 
-@Article{Varian1998,
+@TechReport{Varian1998,
   author    = {Varian, Hal R},
   title     = {{Markets for Information Goods}},
-  journal   = {October},
   year      = {1998},
-  volume    = {1998},
-  number    = {4},
-  pages     = {1--19},
   abstract  = {Much has been written about the difficulties that ``information'' poses for neoclassical economics. How ironic that ICE-information, communication, and entertainment-now comprises the largest sector in the American economy. If information poses problems for economic theory, so much the worse for economic theory: real markets seem to deal with information rather well. This paradox is the central theme of this essay: information, that slippery and strange economic good, is, in fact, handled very well by market institutions. The reason is that real markets are much more creative than those simple competitive markets studied in Econ 1. The fact that real-life markets can handle a good as problematic as is a testament to the flexibility and robustness of market institutions.},
   keywords  = {value of data, primary},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
   url       = {http://people.ischool.berkeley.edu/{~}hal/Papers/japan/index.html},
 }
+
+@TechReport{PomattoTheCostOfInformation2018,
+  author      = {Luciano Pomatto and Philipp Strack and Omer Tamuz},
+  title       = {The Cost of Information},
+  institution = {arXiv},
+  year        = {2018},
+  file        = {:E\:\\Dropbox\\DataUnions\\literature\\Pomatto_CostofInformation_arXiv_2018.pdf:PDF},
+  keywords    = {value of data, primary},
+}
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
