fixing reference rendering

--- a/primary.bib
+++ b/primary.bib
@@ -44,7 +44,7 @@
   url      = {https://digitalcommons.ilr.cornell.edu/ldi/32/},
 }
 
-@Article{abowd:schmutte:BPEA:2015,
+@Article{abowdschmutteBPEA2015,
   author    = {John M. Abowd and Ian M. Schmutte},
   title     = {Economic analysis and statistical disclosure limitation},
   journal   = {Brookings Papers on Economic Activity},
