--- a/index.Rmd
+++ b/index.Rmd
@@ -22,7 +22,9 @@ We have organized these references into a reading course focused on 10-15 primar
 * Economics of Privacy
 * Value of Privacy and Data Accuracy
 
-In the remainder of this document, for each topic, we provide a very brief description of the papers in the reading course and why we selected them. In each case, we orient the reader to the key issues, concepts, and tools in each topic. In addition to the reading course, we have also curated a much more extensive list of references, [available here](https://github.com/labordynamicsinstitute/privacy-bibliography/blob/master/sloan-privacy-bibliography.pdf).
+In the remainder of this document, for each topic, we provide a very brief description of the papers in the reading course and why we selected them. In each case, we orient the reader to the key issues, concepts, and tools in each topic. In addition to the reading course, we have also curated a much more extensive list of references, [available here](https://github.com/labordynamicsinstitute/privacy-bibliography/blob/master/sloan-privacy-bibliography.pdf).[^1]
+
+[^1]: We gratefully acknowledge the support of Alfred P.\ Sloan Foundation Grant G-2015-13903 and NSF Grant SES-1131848.
 
 # Background
 To begin, we have curated a short list of background references that frame a particular set of research topics. @AbowdSchmutte:Privacy:AER show how to combine formal privacy models with the classic theory of public goods to understand and guide decisions about privacy protection and data dissemination. For the neophyte, @Nissim:DPNonTech:WP:2018 provide a non-technical introduction to formal privacy models in general, and differential privacy in particular.  @Heffetz2014 also introduce differential privacy, but targeted toward economists. After reading these introductory treatments, you should review the textbook treatment of differential privacy in @Dwork:Roth:journal:version:2014, focusing on Chapters 1--3. We also recommend consultation of the very fine tutorial ["Differential Privacy in the Wild: A tutorial on current practices and open challenges"](https://users.cs.duke.edu/~ashwin/index.html#tutorials) by Michael Hay, Xi He, and Ashwin Machanavajjhala.
