--- a/primary.bib
+++ b/primary.bib
@@ -45,7 +45,7 @@
 }
 
 @Article{abowdschmutteBPEA2015,
-  author    = {John M. Abowd and Ian M. Schmutte},
+  author    = {John Abowd and Ian Schmutte},
   title     = {Economic analysis and statistical disclosure limitation},
   journal   = {Brookings Papers on Economic Activity},
   year      = {2015},
