--- a/primary.bib
+++ b/primary.bib
@@ -45,7 +45,7 @@
 }
 
 @Article{abowdschmutteBPEA2015,
-  author    = {Abowd, John M. and Schmutte, Ian M.},
+  author    = {Abowd, John and Schmutte, Ian M.},
   title     = {Economic analysis and statistical disclosure limitation},
   journal   = {Brookings Papers on Economic Activity},
   year      = {2015},
@@ -75,7 +75,7 @@
 }
 
 @Article{AbowdSchmutte:Privacy:AER,
-  author   = {Abowd, John M. and Schmutte, Ian M.},
+  author   = {Abowd, John and Schmutte, Ian M.},
   title    = {An Economic Analysis of Privacy Protection and Statistical Accuracy as Social Choices},
   journal  = {American Economic Review},
   year     = {2019},
