--- a/primary.bib
+++ b/primary.bib
@@ -75,7 +75,7 @@
 }
 
 @Article{AbowdSchmutte:Privacy:AER,
-  author   = {Abowd, John and Schmutte, Ian M.},
+  author   = {Abowd, John and Schmutte, Ian},
   title    = {An Economic Analysis of Privacy Protection and Statistical Accuracy as Social Choices},
   journal  = {American Economic Review},
   year     = {2019},
