--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Introductory Readings in Formal Privacy for Economists (In Progress)"
+title: "Introductory Readings in Formal Privacy for Economists"
 author: "John M. Abowd, Ian M. Schmutte, and Lars Vilhuber"
 site: bookdown::bookdown_site
 github-repo: labordynamicsinstitute/privacy-bibliography
