--- a/library.bib
+++ b/library.bib
@@ -106,7 +106,7 @@ eprint = {
 @Misc{commerce.gov_2018,
   author       = {{U.S.~Department of Commerce}},
   title        = {{U.S.\ Department of Commerce Announces Reinstatement of Citizenship Question to the 2020 Decennial Census}},
-  howpublished = {\url{https://www.commerce.gov/news/press-releases/2018/03/us-department-commerce-announces-reinstatement-citizenship-question-2020}},
+  howpublished = {https://www.commerce.gov/news/press-releases/2018/03/us-department-commerce-announces-reinstatement-citizenship-question-2020},
   month        = {3},
   year         = {2018},
   note         = {Accessed: March 13, 2018},
@@ -143,7 +143,7 @@ eprint = {
   number   = {8},
   doi      = {N/A},
   keywords = {formal privacy},
-  url      = {\url{https://machinelearning.apple.com/2017/12/06/learning-with-privacy-at-scale.html}},
+  url      = {https://machinelearning.apple.com/2017/12/06/learning-with-privacy-at-scale.html},
 }
 
 @Article{arrieta:dataAsLabor:2017,
@@ -172,7 +172,6 @@ eprint = {
 @Misc{Harvard:DataPrivacyLab,
   author       = {{Harvard Data Privacy Lab}},
   title        = {{Harvard Data Privacy Lab Homepage}},
-  howpublished = {\url{https://dataprivacylab.org/}},
   year         = {2018},
   note         = {Accessed: 2018-03-17},
   doi          = {N/A},
@@ -190,7 +189,7 @@ eprint = {
 },
   keywords  = {formal privacy},
   publisher = {Association for Computing Machinery, Inc.},
-  url       = {\url{https://www.microsoft.com/en-us/research/publication/privacy-integrated-queries/}},
+  url       ={https://www.microsoft.com/en-us/research/publication/privacy-integrated-queries/},
 }
 
 @Article{Mulry:Accuracy:JASA:1990,
@@ -1062,7 +1061,7 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   keywords    = {Economics of Privacy},
   owner       = {vilhuber},
   timestamp   = {2018.01.30},
-  url         = {\url{http://digitalcommons.ilr.cornell.edu/ldi/37/}},
+  url         = {http://digitalcommons.ilr.cornell.edu/ldi/37/},
 }
 
 @Article{abowd:schmutte:BPEA:2015,
@@ -3996,7 +3995,7 @@ instead of a hierarchy.},
   lastaccessed = {February 11, 2013},
   owner        = {vilhuber},
   timestamp    = {2016.08.30},
-  url          = {\url{http://www.law.cornell.edu/topn/confidential_information_protection_and_statistical_efficiency_act_of_2002}},
+  url          = {http://www.law.cornell.edu/topn/confidential_information_protection_and_statistical_efficiency_act_of_2002},
 }
 
 @Misc{title13,
@@ -4007,7 +4006,7 @@ instead of a hierarchy.},
   lastaccessed = {February 11, 2013},
   owner        = {vilhuber},
   timestamp    = {2016.08.30},
-  url          = {\url{https://www.law.cornell.edu/uscode/pdf/lii_usc_TI_13.pdf}},
+  url          = {https://www.law.cornell.edu/uscode/pdf/lii_usc_TI_13.pdf},
 }
 
 @Article{Ullman2014,
@@ -5543,7 +5542,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
   note         = {Accessed on March 21, 2018},
   doi          = {N/A},
   keywords     = {policy},
-  url          = {\url{https://obamawhitehouse.archives.gov/sites/default/files/omb/memoranda/2017/m-17-12_0.pdf}},
+  url          = {https://obamawhitehouse.archives.gov/sites/default/files/omb/memoranda/2017/m-17-12_0.pdf},
 }
 
 @Misc{IRS:SOIProducts,
@@ -5565,7 +5564,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
   note         = {Accessed on March 21, 2018},
   doi          = {N/A},
   keywords     = {policy},
-  url          = {\url{https://www2.census.gov/foia/ds_policies/ds022.pdf}},
+  url          = {https://www2.census.gov/foia/ds_policies/ds022.pdf},
 }
 
 @Article{Hoxby:BPEA:2015,
@@ -5587,7 +5586,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
   month        = oct,
   year         = {1997},
   note         = {(Cited on March 22, 2018)},
-  url          = {\url{https://obamawhitehouse.archives.gov/omb/fedreg_1997standards}},
+  url          = {https://obamawhitehouse.archives.gov/omb/fedreg_1997standards},
 }
 
 @Misc{Utah:v:Evans:2002,
