--- a/primary.bib
+++ b/primary.bib
@@ -641,9 +641,8 @@
   month        = jun,
   year         = {2017},
   note         = {public document in replication archive 10.5281/zenodo.1208758},
-  doi          = {N/A},
-  keywords     = {background},
-  url          = {N/A},
+  doi          = {10.5281/zenodo.1208758},
+  keywords     = {background}
 }
 
 @InProceedings{jorgensen:personalized:ICDE:2015,
