--- a/sloan-privacy-bibliography.tex
+++ b/sloan-privacy-bibliography.tex
@@ -1,6 +1,5 @@
-% !TeX TXS-program:bibliography = txs:///biber
 % !TEX program = xelatex
-% !BIB program = biblatex
+% !BIB program = biber
 
 \documentclass[12pt,letterpaper]{article}
 % \usepackage[utf8]{inputenc}
@@ -62,7 +61,6 @@ pdfsubject={Bibliography},%
 \begin{document}
 \maketitle
 
-This bibliography is generated for the Sloan project at Cornell University's Labor Dynamics Institute. It is a curated selection of privacy-related articles. Articles are in alphabetical order of the first author's last name.
 \nocite{*}
 \section*{Key References}
 % \printbibliography[title={Articles}]
