--- a/index.Rmd
+++ b/index.Rmd
@@ -6,39 +6,41 @@ github-repo: labordynamicsinstitute/privacy-bibliography
 documentclass: article
 bibliography: [primary.bib]
 link-citations: true
-citation_package: natbib
-biblio-style: "authoryear"
 ---
 
 # Overview
 The purpose of this document is to provide scholars with a comprehensive list of readings relevant to the economic analysis of formal privacy, and particularly its application to public statistics. 
-Statistical agencies and tech giants are rapidly adopting formal privacy models make the tradeoff between privacy and data quality precise. The question then becomes, how much privacy loss should they allow? @AbowdSchmutte:Privacy:AER argue that this choice ultimately depends on how decision makers weigh the costs of privacy loss against the benefits of higher-quality data. Making progress on these questions requires familiarity with new tools from computer science and statistics, the objectives and policy environment within which statistical agencies operate, along with the economic analysis of information. 
+Statistical agencies and tech giants are rapidly adopting formal privacy models which make the tradeoff between privacy and data quality precise. The question then becomes, how much privacy loss should they allow? @AbowdSchmutte:Privacy:AER argue that this choice ultimately depends on how decision makers weigh the costs of privacy loss against the benefits of higher-quality data. Making progress on these questions requires familiarity with new tools from computer science and statistics, the objectives and policy environment within which statistical agencies operate, along with the economic analysis of information. 
 
 We have organized these references into a reading course focused on 10-15 primary references in each of six different topics:
 
-* Formal Privacy
-* Policy and Official Statistics
-* Statistical Disclosure Limitation
-* Economics of Privacy
-* Value of Privacy and Data Accuracy
+* [Formal Privacy]
+* [Policy and Official Statistics]
+* [Statistical Disclosure Limitation]
+* [Economics of Privacy]
+* [Value of Privacy and Data Accuracy]
 
-In the remainder of this document, for each topic, we provide a very brief description of the papers in the reading course and why we selected them. In each case, we orient the reader to the key issues, concepts, and tools in each topic. In addition to the reading course, we have also curated a much more extensive list of references, [available here](https://github.com/labordynamicsinstitute/privacy-bibliography/blob/master/sloan-privacy-bibliography.pdf).[^1]
+In the remainder of this document, for each topic, we provide a very brief description of the papers in the reading course and why we selected them. In each case, we orient the reader to the key issues, concepts, and tools in each topic. `r if (knitr::is_html_output()) 'All references are repeated in the global [References] section.'` In addition to this reading course, we have also curated a much more extensive list of references, [available here](sloan-privacy-bibliography.pdf).
 
-[^1]: We gratefully acknowledge the support of Alfred P.\ Sloan Foundation Grant G-2015-13903 and NSF Grant SES-1131848.
+## Contributing
+We encourage interested readers and researchers to use these readings for their classes and training, modifying it as needed. We encourage users to fork this document at [https://github.com/labordynamicsinstitute/privacy-bibliography](https://github.com/labordynamicsinstitute/privacy-bibliography). This document is licensed under the [Creative Commons Attribution-NonCommercial 4.0 International Public License  (CC BY-NC 4.0)](https://creativecommons.org/licenses/by-nc/4.0/). Should that license not meet your needs, contact us. We would appreciate it if any improvements, corrections, and other contributions were sent back to us, for instance via the "[Issues](https://github.com/labordynamicsinstitute/privacy-bibliography/issues)" feature on 
+Github`r if (knitr::is_html_output()) ', or by clicking on the edit button in the toolbar above'`. 
+
+## Support 
+We gratefully acknowledge the support of Alfred P.\ [Sloan Foundation Grant G-2015-13903](https://sloan.org/grant-detail/6845) and [NSF Grant SES-1131848](http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=1131848).
 
 # Background
-To begin, we have curated a short list of background references that frame a particular set of research topics. @AbowdSchmutte:Privacy:AER show how to combine formal privacy models with the classic theory of public goods to understand and guide decisions about privacy protection and data dissemination. For the neophyte, @Nissim:DPNonTech:WP:2018 provide a non-technical introduction to formal privacy models in general, and differential privacy in particular.  @Heffetz2014 also introduce differential privacy, but targeted toward economists. After reading these introductory treatments, you should review the textbook treatment of differential privacy in @Dwork:Roth:journal:version:2014, focusing on Chapters 1--3. We also recommend consultation of the very fine tutorial ["Differential Privacy in the Wild: A tutorial on current practices and open challenges"](https://users.cs.duke.edu/~ashwin/index.html#tutorials) by Michael Hay, Xi He, and Ashwin Machanavajjhala.
+We start by providing a short list of background references that frame a particular set of research topics. @AbowdSchmutte:Privacy:AER show how to combine formal privacy models with the classic theory of public goods to understand and guide decisions about privacy protection and data dissemination. For the neophyte, @Nissim:DPNonTech:WP:2018 provide a non-technical introduction to formal privacy models in general, and differential privacy in particular.  @Heffetz2014 also introduce differential privacy, but targeted toward economists. After reading these introductory treatments, you should review the textbook treatment of differential privacy in @Dwork:Roth:journal:version:2014, focusing on Chapters 1--3. We also recommend consultation of the very fine tutorial ["Differential Privacy in the Wild: A tutorial on current practices and open challenges"](https://users.cs.duke.edu/~ashwin/index.html#tutorials) by Michael Hay, Xi He, and Ashwin Machanavajjhala.
 
-To provide a concrete grounding in practical issues of privacy,  @jones:2017 summarizes the history of privacy breaches and privacy protection in the U.S. statistical system. It is important to ask how formal privacy models do, and do not, capture common language and legal interpretations of privacy. As such, we also recommend a review of some of the laws governing data privacy in the U.S. [@title13, @cipsea]. A quick review of the Harvard Data Privacy Lab website [@Harvard:DataPrivacyLab] can provide a sense of how differential privacy is being implemented in various settings. @Goroff2015 also provides a very useful overview of the key issues in this reading course for a lay audience.
+To provide a concrete grounding in practical issues of privacy,  @jones:2017 summarizes the history of privacy breaches and privacy protection in the U.S. statistical system. It is important to ask how formal privacy models do, and do not, capture common language and legal interpretations of privacy. As such, we also recommend a review of some of the laws governing data privacy in the U.S. , e.g. @title13 and  @cipsea (Confidential Information Protection and Statistical Efficiency Act, also known as CIPSEA). A quick review of the Harvard Data Privacy Lab website [@Harvard:DataPrivacyLab] can provide a sense of how differential privacy is being implemented in various settings. @Goroff2015 also provides a very useful overview of the key issues in this reading course for a lay audience.
 @Abowd:JPC:2017 and @abowd:fcsm:2016 survey formal privacy systems being implemented at the Census Bureau.
 
 
+# Formal Privacy 
+The literature on formal privacy is vast. Here, we focus on those papers that will help orient the reader to the key ideas and tools of differential privacy, particularly those relevant to the economic problem of determining optimal privacy protection when publishing population statistics. For the purpose of this reading course and associated bibliography, we associate formal privacy as a literature emerging in computer science out of cryptography. In the section on "[Statistical Disclosure Limitation]", we recommend additional readings from the SDL literature, which has a distinct origin in statistics.
 
-# Formal Privacy
-The literature on formal privacy is vast. Here, we focus on those papers that will help orient the reader to the key ideas and tools of differential privacy; particularly those relevant to the economic problem of determining optimal privacy protection when publishing population statistics. For the purpose of this reading course and associated bibliography, we associate formal privacy as a literature emerging in computer science out of cryptography. Below, we recommend additional readings from the SDL literature, which has a distinct origin in statistics.
 
-
-@Dworketal:2006 is generally regarded as the first paper to formally introduce differential privacy. Its development was due, in part, to the *database reconstruction theorem* published by @Dinur:2003:RIW:773153.773173, which showed that most data publication mechanisms are blatantly non-private in a well-defined sense. The database reconstruction theorem has recently been shown to have very practical consequences for the statistical disclosure protections in place at the Census Bureau. The concept of k-anonymity developed by @sweeney:2002 is another important antecedent that bridges the formal privacy and SDL literatures.
+@Dworketal:2006 is generally regarded as the first paper to formally introduce differential privacy. Its development was due, in part, to the *database reconstruction theorem* published by @Dinur:2003:RIW:773153.773173, which showed that most data publication mechanisms are blatantly non-private in a well-defined sense. The database reconstruction theorem has recently been shown to have very practical consequences for the statistical disclosure protections in place at the Census Bureau. The concept of *k-anonymity* developed by @sweeney:2002 is another important antecedent that bridges the formal privacy and SDL literatures.
 
 In assessing formal privacy as a framework for modeling data publication, it is natural to consider the optimal, or maximal amount of data accuracy that can be provided while maintaining privacy. @Gupta:2012:ICP:2238936.2238961 establish a mechanism that is universally optimal for a broad class of data users, suggesting that technical efficiency could be guaranteed in private data publication without the need to learn about the preferences or side information of data consumers. However, @BrennerNissim:Impossibility:SIAM:2014 showed that their result is not generalizable to broader types of data publication.
 @Nissim:2012:PMD:2229012.2229073 provide a clear and instructive illustration of how individual preferences for privacy can be modeled in mechanism design problems. 
@@ -63,7 +65,7 @@ Finally, @HaneySIGMOD2017 and @Holan2010 are good examples of the sorts of imple
 
 
 # Statistical Disclosure Limitation
-Within most national statistical systems, the primary approach to protecting respondent privacy has been *statistical disclosure limitation* or SDL. @anderson:challenges:JOS:2007 describes the history of threats to confidentiality in the U.S. statistical system prior to 1965. Ivan @Fellegi:1972 initiated the statistical analysis of data confidentiality. @Dalenius:Towards:1977 recognized that statistical agencies would need to do more than just protect against direct disclosures, and thus warned against what he called inferential disclosure. His idea was formalized by @Duncan:Lambert:1986, and provides the ultimate rationale for formal privacy in national statistics. 
+Within most national statistical systems, the primary approach to protecting respondent privacy has been *statistical disclosure limitation* or SDL. @anderson:challenges:JOS:2007 describes the history of threats to confidentiality in the U.S. statistical system prior to 1965.  @Fellegi:1972 initiated the statistical analysis of data confidentiality. @Dalenius:Towards:1977 recognized that statistical agencies would need to do more than just protect against direct disclosures, and thus warned against what he called inferential disclosure. His idea was formalized by @Duncan:Lambert:1986, and provides the ultimate rationale for formal privacy in national statistics. 
  
 @abowdschmutteBPEA2015 review the SDL methods currently in use and discuss their application to economic data. They argue that the analysis of SDL-laden data is inherently compromised because the details of the SDL protections cannot be disclosed. If they cannot be disclosed, their consequences for inference are unknowable, and, as they show, potentially large. @Garfinkel:Deidentification:NIST:2015 discusses techniques for de-identifying data and the many ways in which modern computing tools and a data-rich environment may render effective de-identification impossible.
 Finally, @spwp22 provides the most comprehensive review of SDL methods currently in use across the U.S. statistical system. 
@@ -72,21 +74,23 @@ Finally, @spwp22 provides the most comprehensive review of SDL methods currently
 There is a large and robust literature on privacy in economics. That literature is generally focused on the value to individuals of being able to conceal private information, like a health condition, from a firm or prospective employer. 
 The challenge to the firm is to design mechanisms, like pricing strategies, that encourage people to disclose private information. For an overview of ideas in this literature, we recommend reading @stigler1980introduction, @posner1981economics, and @hirshleifer1980privacy, which appeared in an early symposium. @Varian1996 and @acquisti:taylor:wagman:2015 both provide comprehensive surveys at different points in the development of this literature.
 
-Very few papers tie the economics of privacy directly to official statistics. @Campbell:Privacy:JEMS discuss the consequences for firm profits and individual welfare of data privacy restrictions in California, which prevent firms from sharing certain types of mortgage data. Goldfarb:Shifts:AERPP:2012 discuss shifts in privacy attitudes and their implications for firms. In @Hsu:EconomicEpsilon:IEEE:2014, address the question of optimal privacy protection from a very similar perspective to @AbowdSchmutte:Privacy:AER. Finally, @Ohm:Broken:UCLALR:2010 surveys the economic implications of contemporary threats to data privacy from a legal perspective.
+Very few papers tie the economics of privacy directly to official statistics. @Campbell:Privacy:JEMS discuss the consequences for firm profits and individual welfare of data privacy restrictions in California, which prevent firms from sharing certain types of mortgage data. @Goldfarb:Shifts:AERPP:2012 discuss shifts in privacy attitudes and their implications for firms.  @Hsu:EconomicEpsilon:IEEE:2014, address the question of optimal privacy protection from a very similar perspective to @AbowdSchmutte:Privacy:AER. Finally, @Ohm:Broken:UCLALR:2010 surveys the economic implications of contemporary threats to data privacy from a legal perspective.
 
 
 # Value of Privacy and Data Accuracy
-One key challenge for implementing formal privacy systems lies in choosing the amount, or type, of privacy to provide. Answering this question requires some way to understand, the individual and social value of privacy. @Ghosh:Auction:GEB:2015 and @Li2014 both model mechanisms for pricing private data under the assumption that individuals are only willing to disclose such information if they are paid.
+One key challenge for implementing formal privacy systems lies in choosing the amount, or type, of privacy to provide. Answering this question requires some way to understand the individual and social value of privacy. @Ghosh:Auction:GEB:2015 and @Li2014 both model mechanisms for pricing private data under the assumption that individuals are only willing to disclose such information if they are paid.
 
-Part of the social value of privacy arises from its relationship to scientific integrity. While the law of information recovery suggests that improved privacy must come at the cost of increased error in published statistics, these effects might be mitigated through two distinct channels. First, people are more truthful in surveys if they believe their data is not at risk, as @couper2008risk illustrate. Second, recent work in computer science and statistics suggests another somewhat surprising benefit of differential privacy: protection against overfitting [@cummings:adaptive:corr:2016,@Dwork:Generalization:NIPS:2015]. A complete accounting of the costs and benefits of formal privacy systems should take these channels into account.
+Part of the social value of privacy arises from its relationship to scientific integrity. While the law of information recovery suggests that improved privacy must come at the cost of increased error in published statistics, these effects might be mitigated through two distinct channels. First, people are more truthful in surveys if they believe their data is not at risk, as @couper2008risk illustrate. Second,  work in computer science [@Dwork:Generalization:NIPS:2015 ] and statistics [@cummings:adaptive:corr:2016] suggests another somewhat surprising benefit of differential privacy: protection against overfitting. A complete accounting of the costs and benefits of formal privacy systems should take these channels into account.
 
 It is equally necessary to develop a more robust understanding of why data is valuable in the first place, the overall social cost of increasing error in public statistics. This seems to be an area in which very little comprehensive theoretical or empirical research has been done. We nevertheless recommend what seem to be good starting points.
 
-On the theoretical side, economists studying privacy have also developed models of the value of data to firms. In these models, firms benefit from being able to tailor prices based on individual demand, or from being able to market more effectively [@Taylor:Consumer:RAND:2004,@Varian1998]. More recently, a theoretical literature on information design has begun to consider more effective ways to manage markets for consumer information [@10.1257/aer.20161079,@PomattoTheCostOfInformation2018]. The recent literature is related to @Spencer:Optimal:JASA:1985, who developed a decision-theoretic framework for modeling optimal data quality.
+On the theoretical side, economists studying privacy have also developed models of the value of data to firms. In these models, firms benefit from being able to tailor prices based on individual demand [@Taylor:Consumer:RAND:2004], or from being able to market more effectively [@Varian1998]. More recently, a theoretical literature on information design has begun to consider more effective ways to manage markets for consumer information, see  @10.1257/aer.20161079 and @PomattoTheCostOfInformation2018. The recent literature is related to @Spencer:Optimal:JASA:1985, who developed a decision-theoretic framework for modeling optimal data quality.
 
-On the empirical side, a handful of interesting use cases suggest techniques for uncovering the value of data. For example, @CardAER2012 and @perez-truglia:transparency:SSRN:2016 show how workers respond to pay transparency policies, which give them new information about co-worker salaries. @Seeskin:Spencer:Effects:2015 use a calibration exercise to study the costs, measured in misallocated congressional seats, of reduced accuracy in Census data.
+On the empirical side, a handful of interesting use cases suggest techniques for uncovering the value of data. For example, @CardAER2012 and @perez-truglia:transparency:SSRN:2016 show how workers respond to pay transparency policies, which give them new information about co-worker salaries. @Seeskin:Spencer:Effects:2015 use a calibration exercise to study the costs, measured in misallocated congressional seats, of reduced accuracy in population census data.
 
 
-`r if (knitr::is_html_output()) '# References {-}'`
+# References
+
+<!-- `r if (knitr::is_html_output()) '# References'` -->
 
 <!-- If you need PDF output, uncomment bookdown::pdf_book above in YAML. You will need a LaTeX installation, e.g., https://yihui.name/tinytex/ -->
