--- a/primary.bib
+++ b/primary.bib
@@ -13,26 +13,6 @@
   url      = {https://journalprivacyconfidentiality.org/index.php/jpc/article/view/404},
 }
 
-@Article{Fellegi:1972,
-  author    = {Fellegi, I. P.},
-  title     = {On the question of statistical confidentiality},
-  journal   = {Journal of the American Statistical Association},
-  year      = {1972},
-  volume    = {67},
-  number    = {337},
-  pages     = {7--18},
-  issn      = {0162-1459},
-  abstract  = {In Section 1 the nature of statistical confidentiality is explored, i.e., its essential role in the collection of data by statistical offices, its relationship to privacy and the need for increased attention to potential statistical disclosures because of the increased tabulation and dissemination capabilities of statistical offices. In Section 2 a definition of inadvertent direct disclosure is provided as well as a theorem concerning a test for residual disclosure of tabulations. In Section 3 different media and methods of data dissemination are considered from the point of view of potential for statistical disclosure.},
-  copyright = {Copyright 1972 American Statistical Association},
-  doi       = {10.2307/2284695},
-  keywords  = {statistical disclosure limiation, SDL, primary},
-  language  = {English},
-  owner     = {vilhuber},
-  publisher = {American Statistical Association},
-  timestamp = {2016.08.30},
-  url       = {https://amstat.tandfonline.com/doi/abs/10.1080/01621459.1972.10481199#.XFuE8VxKg2w},
-  xurlx     = {http://www.jstor.org/stable/2284695},
-}
 
 @Article{abowd:fcsm:2016,
   author   = {Abowd, John M.},
@@ -82,6 +62,7 @@
   volume   = {109},
   number   = {1},
   pages    = {171-202},
+  doi      = {10.1257/aer.20170627},
   abstract = {Statistical agencies face a dual mandate to publish accurate statistics while protecting respondent privacy. Increasing privacy protection requires decreased accuracy. Recognizing this as a resource allocation problem, we propose an economic solution: operate where the marginal cost of increasing privacy equals the marginal benefit. Our model of production, from computer science, assumes data are published using an efficient differentially private algorithm. Optimal choice weighs the demand for accurate statistics against the demand for privacy. Examples from U.S.\ statistical programs show how our framework can guide decision-making. Further progress requires a better understanding of willingness-to-pay for privacy and statistical accuracy.},
   keywords = {Economics of Privacy, Formal Privacy, Statistical Disclosure Limitation, primary, background},
 }
@@ -215,8 +196,8 @@
   volume    = {24},
   number    = {2},
   pages     = {255},
+  url       = {http://www.scb.se/contentassets/ca21efb41fee47d293bbee5bf7be7fb3/risk-of-disclosure-perceptions-of-risk-and-concerns-about-privacy-and-confidentiality-as-factors-in-survey-participation.pdf},
   keywords  = {value of privacy, primary},
-  publisher = {NIH Public Access},
 }
 
 @Article{cummings:empirical:corr:2014,
@@ -239,7 +220,6 @@
   year      = {2016},
   volume    = {abs/1602.07726},
   bibsource = {dblp computer science bibliography, http://dblp.org},
-  doi       = {N/A},
   keywords  = {value of privacy, primary},
   timestamp = {Tue, 01 Mar 2016 17:47:25 +0100},
   url       = {http://arxiv.org/abs/1602.07726},
@@ -264,7 +244,7 @@
 @InProceedings{Dinur:2003:RIW:773153.773173,
   author    = {Dinur, Irit and Nissim, Kobbi},
   title     = {Revealing information while preserving privacy},
-  booktitle = {Proceedings of the Twenty-second ACM SIGMOD-SIGACT-SIGART Symposium on Principles of Database Systems},
+  booktitle = {Proceedings of the Twenty-second {ACM} {SIGMOD}-{SIGACT}-{SIGART} Symposium on Principles of Database Systems},
   year      = {2003},
   series    = {PODS '03},
   pages     = {202--210},
@@ -318,11 +298,9 @@
   author    = {Dwork, Cynthia and Feldman, Vitaly and Hardt, Moritz and Pitassi, Toni and Reingold, Omer and Roth, Aaron},
   title     = {Generalization in Adaptive Data Analysis and Holdout Reuse},
   booktitle = {Advances in Neural Information Processing Systems 28},
-  publisher = {Curran Associates, Inc.},
   year      = {2015},
   editor    = {C. Cortes and N. D. Lawrence and D. D. Lee and M. Sugiyama and R. Garnett},
   pages     = {2341--2349},
-  doi       = {N/A},
   keywords  = {value of privacy, primary},
   url       = {http://papers.nips.cc/paper/5993-generalization-in-adaptive-data-analysis-and-holdout-reuse.pdf},
 }
@@ -337,6 +315,7 @@
   address   = {Berlin, Heidelberg},
   publisher = {Springer-Verlag},
   note      = {DOI:10.1007/11681878{\_}14},
+  doi      = {10.1007/11681878_14},
   acmid     = {2180305},
   doi       = {10.29012/jpc.v7i3.405},
   isbn      = {978-3-540-32731-8},
@@ -484,10 +463,9 @@
 @InCollection{HaneySIGMOD2017,
   author    = {Samuel Haney and Ashwin Machanavajjhala and John M. Abowd and Matthew Graham and Mark Kutzbach and Lars Vilhuber},
   title     = {Utility Cost of Formal Privacy for Releasing National Employer-Employee Statistics},
-  booktitle = {Proceedings of the 2017 International Conference on Management of Data},
-  publisher = {ACM},
+  booktitle = {Proceedings of the 2017 {ACM} {SIGMOD} International Conference on Management of Data},
+  publisher = {Association for Computing Machinery},
   year      = {2017},
-  volume    = {forthcoming},
   series    = {SIGMOD '17},
   abstract  = {National statistical agencies around the world publish tabular summaries based on combined employer-employee (ER-EE) data. The privacy of both individuals and business establishments that feature in these data are protected by law in most countries. These data are currently released using a variety of statistical disclosure limitation (SDL) techniques that do not reveal the exact characteristics of particular employers and employees, but lack provable privacy guarantees limiting inferential disclosures.
 	In this work, we present novel algorithms for releasing tabular summaries of linked ER-EE data with formal, provable guarantees of privacy. We show that state-of-the-art differentially private algorithms add too much noise for the output to be useful. Instead, we identify the privacy requirements mandated by current interpretations of the relevant laws, and formalize them using the Pufferfish framework. We then develop new privacy definitions that are customized to ER-EE data and satisfy the statutory privacy requirements. We implement the experiments in this paper on production data gathered by the U.S. Census Bureau. An empirical evaluation of utility for these data shows that for reasonable values of the privacy-loss parameter $\epsilon\geq$ 1, the additive error introduced by our provably private algorithms is comparable, and in some cases better, than the error introduced by existing SDL techniques that have no provable privacy guarantees. For some complex queries currently published, however, our algorithms do not have utility comparable to the existing traditional SDL algorithms. Those queries are fodder for future research.},
@@ -504,9 +482,7 @@
   author    = {Hardt, Moritz and Katrina Ligett and Frank Mc{S}herry},
   title     = {{A Simple and Practical Algorithm for Differentially Private Data Release.}},
   booktitle = {Advances in Neural Information Processing Systems 25},
-  publisher = {Curran Associates, Inc.},
   year      = {2012},
-  editor    = {F. Pereira and C.J.C. Burges and L. Bottou and K.Q. Weinberger},
   pages     = {2339--2347},
   abstract  = {We present new theoretical results on differentially private data release useful with respect to any target class of counting queries, coupled with experimental results on a variety of real world data sets. Specifically, we study a simple combination of the multiplicative weights approach of [Hardt and Rothblum, 2010] with the exponential mechanism of [McSherry and Talwar, 2007]. The multiplicative weights framework allows us to maintain and improve a distribution approximating a given data set with respect to a set of counting queries. We use the exponential mechanism to select those queries most incorrectly tracked by the current distribution. Combing the two, we quickly approach a distribution that agrees with the data set on the given set of queries up to small error. The resulting algorithm and its analysis is simple, but nevertheless improves upon previous work in terms of both error and running time. We also empirically demonstrate the practicality of our approach on several data sets commonly used in the statistical community for contingency table release.},
   keywords  = {formal privacy, primary},
@@ -518,7 +494,7 @@
 @Article{Hardt:Multiplicative:FOCS10,
   author    = {Hardt, Moritz and Rothblum, Guy N.},
   title     = {A Multiplicative Weights Mechanism for Privacy-Preserving Data Analysis},
-  journal   = {2010 IEEE 51st Annual Symposium on Foundations of Computer Science},
+  journal   = {2010 {IEEE} 51st Annual Symposium on Foundations of Computer Science},
   year      = {2010},
   pages     = {61--70},
   issn      = {0272-5428},
@@ -552,7 +528,7 @@
   year      = {2014},
   author    = {Xi He and Ashwin Machanavajjhala and Bolin Ding},
   isbn      = {9781450323765},
-  booktitle = {Proceedings of the ACM SIGMOD International Conference on Management of Data},
+  booktitle = {Proceedings of the 2014 {ACM} {SIGMOD} International Conference on Management of Data},
   doi       = {10.1145/2588555.2588581},
   keywords  = {Blowfish privacy, Differential privacy, Privacy, formal privacy, primary},
   owner     = {vilhuber},
@@ -648,7 +624,7 @@
 @InProceedings{jorgensen:personalized:ICDE:2015,
   author    = {Z. Jorgensen and T. Yu and G. Cormode},
   title     = {Conservative or liberal? Personalized differential privacy},
-  booktitle = {2015 IEEE 31st International Conference on Data Engineering},
+  booktitle = {Proceedings of the 2015 {IEEE} 31st International Conference on Data Engineering},
   year      = {2015},
   pages     = {1023-1034},
   month     = {4},
@@ -740,7 +716,7 @@
 @InProceedings{Machanavajjhala:OTM:ICDE:2008,
   author    = {Machanavajjhala, A. and Kifer, D. and Abowd, J. and Gehrke, J. and Vilhuber, L.},
   title     = {Privacy: theory meets practice on the map},
-  booktitle = {Proceedings of the 2008 IEEE 24th International Conference on Data Engineering},
+  booktitle = {Proceedings of the 2008 {IEEE} 24th International Conference on Data Engineering},
   year      = {2008},
   pages     = {277--286},
   month     = apr,
@@ -774,7 +750,7 @@
   series    = {Committee on National Statistics},
   address   = {Washington, DC},
   isbn      = {978-0-309-45428-5},
-  doi       = {doi: 10.17226/24652},
+  doi       = {10.17226/24652},
   keywords  = {official statistics, primary},
   url       = {https://www.nap.edu/catalog/24652/innovations-in-federal-statistics-combining-data-sources-while-protecting-privacy},
 }
@@ -782,7 +758,7 @@
 @InProceedings{Nissim:2012:PMD:2229012.2229073,
   author    = {Nissim, Kobbi and Orlandi, Claudio and Smorodinsky, Rann},
   title     = {Privacy-aware mechanism design},
-  booktitle = {Proceedings of the 13th ACM Conference on Electronic Commerce},
+  booktitle = {Proceedings of the 13th {ACM} Conference on Electronic Commerce},
   year      = {2012},
   series    = {EC '12},
   pages     = {774--789},
@@ -832,6 +808,7 @@
   year     = {2010},
   volume   = {57},
   pages    = {1701},
+  url  = {https://www.uclalawreview.org/broken-promises-of-privacy-responding-to-the-surprising-failure-of-anonymization-2/},
   keywords = {economics of privacy, primary},
 }
 
@@ -839,7 +816,7 @@
   author   = {Ricardo Perez-Truglia},
   title    = {The effects of income transparency on well-being: evidence from a natural experiment},
   journal  = {SSRN},
-  year     = {2016},
+  year     = {2019},
   month    = feb,
   doi      = {10.2139/ssrn.2657808},
   keywords = {value of data, primary},
@@ -851,16 +828,21 @@
   title       = {The Cost of Information},
   institution = {arXiv},
   year        = {2018},
-  file        = {:E\:\\Dropbox\\DataUnions\\literature\\Pomatto_CostofInformation_arXiv_2018.pdf:PDF},
+  url         = {https://arxiv.org/abs/1812.04211},
+  number      = {1812.04211},
   keywords    = {value of data, primary},
 }
 
 @Article{posner1981economics,
   author    = {Posner, Richard A.},
   title     = {The economics of privacy},
-  journal   = {The American economic review},
+  journal   = {The American Economic Review},
   year      = {1981},
   pages     = {405--409},
+  month     = {May},
+  volume    = 71,
+  issue     = 2,
+  url       = {https://www.jstor.org/stable/1815754},
   keywords  = {economics of privacy, primary},
   owner     = {vilhuber},
   publisher = {JSTOR},
@@ -902,7 +884,6 @@
   address   = {Cornell University},
   month     = jan,
   booktitle = {Proceedings from the 2016 {NSF-Sloan} {Workshop on Practical Privacy}},
-  doi       = {N/A},
   keywords  = {official statistics, primary},
   url       = {https://digitalcommons.ilr.cornell.edu/ldi/33/},
 }
@@ -931,7 +912,6 @@
   journal  = {JSM Proceedings, Government Statistics Section},
   year     = {2015},
   pages    = {3061--3075},
-  doi      = {N/A},
   keywords = {value of data, primary},
   language = {English (US)},
   url      = {https://www.ipr.northwestern.edu/publications/papers/2015/ipr-wp-15-05.html},
@@ -983,7 +963,6 @@
   keywords  = {value of data, data union, primary},
   language  = {English},
   owner     = {vilhuber},
-  publisher = {Wiley on behalf of RAND Corporation},
   timestamp = {2016.08.30},
   url       = {http://doi.wiley.com/10.2307/1593765},
   xurlx     = {http://www.jstor.org/stable/1593765},
