Corrected Anderson and Seltzer URL

--- a/primary.bib
+++ b/primary.bib
@@ -77,6 +77,7 @@
   pages     = {1},
   keywords  = {Statistical Disclosure Limitation, SDL, primary},
   owner     = {vilhuber},
+  url       = {https://www.scb.se/contentassets/ff271eeeca694f47ae99b942de61df83/challenges-to-the-confidentiality-of-u.s.-federal-statistics-1910-1965.pdf},
   timestamp = {2016.08.30},
 }
 
